modificar botones y otros detalles

--- a/frontend/agregar-registros.ui
+++ b/frontend/agregar-registros.ui
@@ -142,36 +142,6 @@ QPushButton:pressed {
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton_6">
-          <property name="styleSheet">
-           <string notr="true">QPushButton {
-	color: rgb(141, 110, 58);
-	border: none;
-	font: 10pt &quot;Arial Rounded MT Bold&quot;;
-	height: 25px;
-}
-
-QPushButton:hover {
-	background-color: rgb(149, 117, 61);
-	color: rgb(255, 255, 255);
-}
-
-QPushButton:pressed {
-    border-style: inset;
-    background-color: rgb(149, 117, 61);
-	color: rgb(255, 255, 255);
-}</string>
-          </property>
-          <property name="text">
-           <string>Historial</string>
-          </property>
-          <property name="icon">
-           <iconset>
-            <normaloff>file-history-fill.png</normaloff>file-history-fill.png</iconset>
-          </property>
-         </widget>
-        </item>
-        <item>
          <widget class="QPushButton" name="pushButton_9">
           <property name="styleSheet">
            <string notr="true">QPushButton {
@@ -223,11 +193,11 @@ QPushButton:pressed {
 }</string>
           </property>
           <property name="text">
-           <string>Agregar Registro</string>
+           <string>Agregar Usuario</string>
           </property>
           <property name="icon">
            <iconset>
-            <normaloff>profile-line.png</normaloff>profile-line.png</iconset>
+            <normaloff>user-add-fill.png</normaloff>user-add-fill.png</iconset>
           </property>
          </widget>
         </item>
@@ -253,7 +223,7 @@ QPushButton:pressed {
 }</string>
           </property>
           <property name="text">
-           <string>Modificar Registro</string>
+           <string>Editar Privilegios</string>
           </property>
           <property name="icon">
            <iconset>
