--- a/frontend/editar-privilegios.ui
+++ b/frontend/editar-privilegios.ui
@@ -19,7 +19,7 @@ background-color:white;
 
 }</string>
   </property>
-  <widget class="QWidget" name="centralwidget">
+  <widget class="QWidget" name="editar_privilegios">
    <property name="styleSheet">
     <string notr="true"/>
    </property>
@@ -53,7 +53,7 @@ background-color:white;
        </spacer>
       </item>
       <item>
-       <widget class="QLabel" name="label_2">
+       <widget class="QLabel" name="title_notarius">
         <property name="styleSheet">
          <string notr="true">font: 26pt &quot;Arial Black&quot;;
 color: rgb(149, 117, 61);</string>
@@ -105,7 +105,7 @@ color: rgb(149, 117, 61);</string>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_6">
         <item>
-         <widget class="QPushButton" name="pushButton_4">
+         <widget class="QPushButton" name="button_tabla">
           <property name="styleSheet">
            <string notr="true">QPushButton {
 	color: rgb(141, 110, 58);
@@ -142,7 +142,7 @@ QPushButton:pressed {
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton_9">
+         <widget class="QPushButton" name="button_editar_privilegios">
           <property name="styleSheet">
            <string notr="true">QPushButton {
 	color: rgb(141, 110, 58);
@@ -172,7 +172,7 @@ QPushButton:pressed {
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton_6">
+         <widget class="QPushButton" name="button_agregar_usuario">
           <property name="styleSheet">
            <string notr="true">QPushButton {
 	color: rgb(141, 110, 58);
@@ -202,7 +202,7 @@ QPushButton:pressed {
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton_5">
+         <widget class="QPushButton" name="button_exporatr_excel">
           <property name="styleSheet">
            <string notr="true">QPushButton {
 	color: rgb(141, 110, 58);
@@ -439,7 +439,7 @@ QPushButton:pressed {
          </spacer>
         </item>
         <item>
-         <widget class="QLabel" name="label_3">
+         <widget class="QLabel" name="label_editar_privilegios">
           <property name="styleSheet">
            <string notr="true">font: 26pt &quot;Arial Black&quot;;
 color: rgb(149, 117, 61);</string>
@@ -480,7 +480,7 @@ color: rgb(149, 117, 61);</string>
       <item>
        <layout class="QGridLayout" name="gridLayout">
         <item row="0" column="1">
-         <widget class="QLabel" name="label">
+         <widget class="QLabel" name="label_tablas">
           <property name="styleSheet">
            <string notr="true">font: 12pt &quot;Arial Rounded MT Bold&quot;;
 color: rgb(141, 110, 58);</string>
@@ -491,7 +491,7 @@ color: rgb(141, 110, 58);</string>
          </widget>
         </item>
         <item row="7" column="3">
-         <widget class="QCheckBox" name="checkBox_7">
+         <widget class="QCheckBox" name="acceso_8">
           <property name="styleSheet">
            <string notr="true">
 font: 75 11pt &quot;MS Shell Dlg 2&quot;;
@@ -503,7 +503,7 @@ color: rgb(149, 117, 61);</string>
          </widget>
         </item>
         <item row="1" column="0">
-         <widget class="QComboBox" name="comboBox">
+         <widget class="QComboBox" name="usuarioslist">
           <property name="styleSheet">
            <string notr="true">QComboBox{
 border: 1px solid #95753d;
@@ -530,7 +530,7 @@ color: rgb(149, 117, 61);
          </widget>
         </item>
         <item row="1" column="3">
-         <widget class="QCheckBox" name="checkBox">
+         <widget class="QCheckBox" name="acceso_1">
           <property name="styleSheet">
            <string notr="true">
 font: 75 11pt &quot;MS Shell Dlg 2&quot;;
@@ -542,7 +542,7 @@ color: rgb(149, 117, 61);</string>
          </widget>
         </item>
         <item row="10" column="3">
-         <widget class="QCheckBox" name="checkBox_10">
+         <widget class="QCheckBox" name="acceso_2">
           <property name="styleSheet">
            <string notr="true">
 font: 75 11pt &quot;MS Shell Dlg 2&quot;;
@@ -554,7 +554,7 @@ color: rgb(149, 117, 61);</string>
          </widget>
         </item>
         <item row="4" column="3">
-         <widget class="QCheckBox" name="checkBox_4">
+         <widget class="QCheckBox" name="acceso_5">
           <property name="styleSheet">
            <string notr="true">
 font: 75 11pt &quot;MS Shell Dlg 2&quot;;
@@ -566,7 +566,7 @@ color: rgb(149, 117, 61);</string>
          </widget>
         </item>
         <item row="5" column="3">
-         <widget class="QCheckBox" name="checkBox_5">
+         <widget class="QCheckBox" name="acceso_6">
           <property name="styleSheet">
            <string notr="true">
 font: 75 11pt &quot;MS Shell Dlg 2&quot;;
@@ -578,7 +578,7 @@ color: rgb(149, 117, 61);</string>
          </widget>
         </item>
         <item row="0" column="3">
-         <widget class="QLabel" name="label_5">
+         <widget class="QLabel" name="label_accesos">
           <property name="styleSheet">
            <string notr="true">font: 12pt &quot;Arial Rounded MT Bold&quot;;
 color: rgb(141, 110, 58);</string>
@@ -589,7 +589,7 @@ color: rgb(141, 110, 58);</string>
          </widget>
         </item>
         <item row="0" column="0">
-         <widget class="QLabel" name="label_4">
+         <widget class="QLabel" name="label_Usuarios">
           <property name="styleSheet">
            <string notr="true">font: 10pt &quot;Arial Rounded MT Bold&quot;;
 color: rgb(141, 110, 58);</string>
@@ -600,7 +600,7 @@ color: rgb(141, 110, 58);</string>
          </widget>
         </item>
         <item row="3" column="3">
-         <widget class="QCheckBox" name="checkBox_3">
+         <widget class="QCheckBox" name="acceso_4">
           <property name="styleSheet">
            <string notr="true">
 font: 75 11pt &quot;MS Shell Dlg 2&quot;;
@@ -612,7 +612,7 @@ color: rgb(149, 117, 61);</string>
          </widget>
         </item>
         <item row="8" column="3">
-         <widget class="QCheckBox" name="checkBox_8">
+         <widget class="QCheckBox" name="acceso_9">
           <property name="styleSheet">
            <string notr="true">
 font: 75 11pt &quot;MS Shell Dlg 2&quot;;
@@ -624,7 +624,7 @@ color: rgb(149, 117, 61);</string>
          </widget>
         </item>
         <item row="9" column="3">
-         <widget class="QCheckBox" name="checkBox_9">
+         <widget class="QCheckBox" name="acceso_10">
           <property name="styleSheet">
            <string notr="true">
 font: 75 11pt &quot;MS Shell Dlg 2&quot;;
@@ -636,7 +636,7 @@ color: rgb(149, 117, 61);</string>
          </widget>
         </item>
         <item row="2" column="3">
-         <widget class="QCheckBox" name="checkBox_2">
+         <widget class="QCheckBox" name="acceso_3">
           <property name="styleSheet">
            <string notr="true">
 font: 75 11pt &quot;MS Shell Dlg 2&quot;;
@@ -648,7 +648,7 @@ color: rgb(149, 117, 61);</string>
          </widget>
         </item>
         <item row="6" column="3">
-         <widget class="QCheckBox" name="checkBox_6">
+         <widget class="QCheckBox" name="acceso_7">
           <property name="styleSheet">
            <string notr="true">
 font: 75 11pt &quot;MS Shell Dlg 2&quot;;
@@ -660,7 +660,7 @@ color: rgb(149, 117, 61);</string>
          </widget>
         </item>
         <item row="0" column="2">
-         <widget class="QLabel" name="label_6">
+         <widget class="QLabel" name="label_acciones">
           <property name="styleSheet">
            <string notr="true">font: 10pt &quot;Arial Rounded MT Bold&quot;;
 color: rgb(141, 110, 58);</string>
@@ -671,7 +671,7 @@ color: rgb(141, 110, 58);</string>
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="QComboBox" name="comboBox_2">
+         <widget class="QComboBox" name="tablaslist">
           <property name="styleSheet">
            <string notr="true">QComboBox{
 border: 1px solid #95753d;
@@ -768,7 +768,7 @@ color: rgb(149, 117, 61);
          </widget>
         </item>
         <item row="1" column="2">
-         <widget class="QComboBox" name="comboBox_3">
+         <widget class="QComboBox" name="accioneslist">
           <property name="styleSheet">
            <string notr="true">QComboBox{
 border: 1px solid #95753d;
@@ -825,7 +825,7 @@ color: rgb(149, 117, 61);
          </spacer>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton_2">
+         <widget class="QPushButton" name="button_guardar">
           <property name="styleSheet">
            <string notr="true">QPushButton {
 border-radius: 6px;
@@ -885,7 +885,6 @@ QPushButton:pressed {
     </item>
    </layout>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources>
   <include location="bar-chart-box-line.qrc"/>
