--- a/frontend/ver-tabla.ui
+++ b/frontend/ver-tabla.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>ver_tabla</class>
+ <widget class="QMainWindow" name="ver_tabla">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -53,7 +53,7 @@ background-color:white;
        </spacer>
       </item>
       <item>
-       <widget class="QLabel" name="label_2">
+       <widget class="QLabel" name="title_notarius">
         <property name="styleSheet">
          <string notr="true">font: 26pt &quot;Arial Black&quot;;
 color: rgb(149, 117, 61);</string>
@@ -105,7 +105,7 @@ color: rgb(149, 117, 61);</string>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_6">
         <item>
-         <widget class="QPushButton" name="pushButton_4">
+         <widget class="QPushButton" name="button_tabla">
           <property name="styleSheet">
            <string notr="true">QPushButton {
 	color: rgb(141, 110, 58);
@@ -142,7 +142,7 @@ QPushButton:pressed {
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton_9">
+         <widget class="QPushButton" name="button_importar_excel">
           <property name="styleSheet">
            <string notr="true">QPushButton {
 	color: rgb(141, 110, 58);
@@ -172,7 +172,7 @@ QPushButton:pressed {
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton_6">
+         <widget class="QPushButton" name="button_agregar_usuario">
           <property name="styleSheet">
            <string notr="true">QPushButton {
 	color: rgb(141, 110, 58);
@@ -202,7 +202,7 @@ QPushButton:pressed {
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton_11">
+         <widget class="QPushButton" name="button_editar_privilegios">
           <property name="styleSheet">
            <string notr="true">QPushButton {
 	color: rgb(141, 110, 58);
@@ -338,7 +338,7 @@ QPushButton:pressed {
        </spacer>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="button_logout">
         <property name="styleSheet">
          <string notr="true">QPushButton {
 	color: rgb(141, 110, 58);
@@ -398,7 +398,7 @@ QPushButton:pressed {
        </spacer>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_10">
+       <widget class="QPushButton" name="button_agregar_registro">
         <property name="styleSheet">
          <string notr="true">QPushButton {
 border-radius: 6px;
@@ -444,7 +444,7 @@ QPushButton:pressed {
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
-         <widget class="QPushButton" name="pushButton_2">
+         <widget class="QPushButton" name="button_exportar">
           <property name="styleSheet">
            <string notr="true">QPushButton {
 border-radius: 11px;
@@ -486,7 +486,7 @@ QPushButton:pressed {
          </spacer>
         </item>
         <item>
-         <widget class="QLineEdit" name="lineEdit">
+         <widget class="QLineEdit" name="lineEdit_search">
           <property name="styleSheet">
            <string notr="true">QLineEdit {
 border-radius: 6px;
@@ -499,7 +499,7 @@ height: 20px;
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton_3">
+         <widget class="QPushButton" name="button_search">
           <property name="styleSheet">
            <string notr="true">QPushButton {
 border-radius: 6px;
@@ -532,7 +532,7 @@ QPushButton:pressed {
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton_5">
+         <widget class="QPushButton" name="button_filtro">
           <property name="styleSheet">
            <string notr="true">QPushButton {
 border-radius: 6px;
@@ -566,7 +566,7 @@ QPushButton:pressed {
        </layout>
       </item>
       <item>
-       <widget class="QTableWidget" name="tableWidget">
+       <widget class="QTableWidget" name="full_table">
         <property name="showGrid">
          <bool>true</bool>
         </property>
@@ -699,7 +699,6 @@ QPushButton:pressed {
     </item>
    </layout>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources>
   <include location="bar-chart-box-line.qrc"/>
