--- a/ui/agregar-usuario-dialog.ui
+++ b/ui/agregar-usuario-dialog.ui
@@ -15,7 +15,8 @@
   </property>
   <property name="styleSheet">
    <string notr="true">QDialog {
-background-color: white;
+ background-color:rgb(255, 253, 225);
+
 }</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
@@ -72,7 +73,20 @@ background-color: white;
           </spacer>
          </item>
          <item>
-          <widget class="QLineEdit" name="lineEdit_contrasenausuario">
+          <widget class="QLabel" name="label_exito">
+           <property name="styleSheet">
+            <string notr="true">QLabel {
+               font: 12pt;
+               color: green;
+               }</string>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="lineEdit_nombreusuario">
            <property name="styleSheet">
             <string notr="true">QLineEdit {
 border-radius: 6px;
@@ -91,7 +105,7 @@ padding: 5px;
           </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="lineEdit_nombreusuario">
+          <widget class="QLineEdit" name="lineEdit_contrasenausuario">
            <property name="styleSheet">
             <string notr="true">QLineEdit {
 border-radius: 6px;
@@ -118,6 +132,19 @@ padding: 5px;
             </size>
            </property>
           </spacer>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_error">
+           <property name="styleSheet">
+            <string notr="true">QLabel {
+               font: 12pt;
+               color: red;
+               }</string>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
@@ -160,32 +187,8 @@ color: rgb(141, 110, 58);</string>
          </property>
         </widget>
        </item>
-       <item row="8" column="2">
-        <widget class="QCheckBox" name="checkBox_acceso_8">
-         <property name="styleSheet">
-          <string notr="true">
-font: 75 11pt &quot;MS Shell Dlg 2&quot;;
-color: rgb(149, 117, 61);</string>
-         </property>
-         <property name="text">
-          <string>Columna 8</string>
-         </property>
-        </widget>
-       </item>
-       <item row="9" column="2">
-        <widget class="QCheckBox" name="checkBox_acceso_9">
-         <property name="styleSheet">
-          <string notr="true">
-font: 75 11pt &quot;MS Shell Dlg 2&quot;;
-color: rgb(149, 117, 61);</string>
-         </property>
-         <property name="text">
-          <string>Columna 9</string>
-         </property>
-        </widget>
-       </item>
        <item row="1" column="0">
-        <widget class="QComboBox" name="comboBox_tablas">
+        <widget class="QComboBox" name="tablaslist">
          <property name="styleSheet">
           <string notr="true">QComboBox{
 border: 1px solid #95753d;
@@ -193,103 +196,6 @@ background-color: #white;
 font: 75 11pt &quot;MS Shell Dlg 2&quot;;
 color: rgb(149, 117, 61);
 }</string>
-         </property>
-         <item>
-          <property name="text">
-           <string>Tabla 1</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Tabla 2</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Tabla 3</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Tabla 4</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Tabla 5</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Tabla 6</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Tabla 7</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Tabla 8</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Tabla 9</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Tabla 10</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Tabla 11</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Tabla 12</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Tabla 13</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Tabla 14</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Tabla 15</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Tabla 16</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Tabla 17</string>
-          </property>
-         </item>
-        </widget>
-       </item>
-       <item row="1" column="2">
-        <widget class="QCheckBox" name="checkBox_acceso1">
-         <property name="styleSheet">
-          <string notr="true">
-font: 75 11pt &quot;MS Shell Dlg 2&quot;;
-color: rgb(149, 117, 61);</string>
-         </property>
-         <property name="text">
-          <string>Columna 1</string>
          </property>
         </widget>
        </item>
@@ -304,80 +210,8 @@ color: rgb(141, 110, 58);</string>
          </property>
         </widget>
        </item>
-       <item row="6" column="2">
-        <widget class="QCheckBox" name="checkBox_acceso_6">
-         <property name="styleSheet">
-          <string notr="true">
-font: 75 11pt &quot;MS Shell Dlg 2&quot;;
-color: rgb(149, 117, 61);</string>
-         </property>
-         <property name="text">
-          <string>Columna 6</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="2">
-        <widget class="QCheckBox" name="checkBox_acceso_2">
-         <property name="styleSheet">
-          <string notr="true">
-font: 75 11pt &quot;MS Shell Dlg 2&quot;;
-color: rgb(149, 117, 61);</string>
-         </property>
-         <property name="text">
-          <string>Columna 2</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="2">
-        <widget class="QCheckBox" name="checkBox_acceso_3">
-         <property name="styleSheet">
-          <string notr="true">
-font: 75 11pt &quot;MS Shell Dlg 2&quot;;
-color: rgb(149, 117, 61);</string>
-         </property>
-         <property name="text">
-          <string>Columna 3</string>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="2">
-        <widget class="QCheckBox" name="checkBox_acceso_4">
-         <property name="styleSheet">
-          <string notr="true">
-font: 75 11pt &quot;MS Shell Dlg 2&quot;;
-color: rgb(149, 117, 61);</string>
-         </property>
-         <property name="text">
-          <string>Columna 4</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="2">
-        <widget class="QCheckBox" name="checkBox_acceso_5">
-         <property name="styleSheet">
-          <string notr="true">
-font: 75 11pt &quot;MS Shell Dlg 2&quot;;
-color: rgb(149, 117, 61);</string>
-         </property>
-         <property name="text">
-          <string>Columna 5</string>
-         </property>
-        </widget>
-       </item>
-       <item row="7" column="2">
-        <widget class="QCheckBox" name="checkBox_acceso_7">
-         <property name="styleSheet">
-          <string notr="true">
-font: 75 11pt &quot;MS Shell Dlg 2&quot;;
-color: rgb(149, 117, 61);</string>
-         </property>
-         <property name="text">
-          <string>Columna 7</string>
-         </property>
-        </widget>
-       </item>
        <item row="1" column="1">
-        <widget class="QComboBox" name="comboBox_acciones">
+        <widget class="QComboBox" name="accioneslist">
          <property name="styleSheet">
           <string notr="true">QComboBox{
 border: 1px solid #95753d;
@@ -398,21 +232,9 @@ color: rgb(149, 117, 61);
          </item>
          <item>
           <property name="text">
-           <string>Eliminar</string>
+           <string>Ver</string>
           </property>
          </item>
-        </widget>
-       </item>
-       <item row="10" column="2">
-        <widget class="QCheckBox" name="checkBox_acceso_10">
-         <property name="styleSheet">
-          <string notr="true">
-font: 75 11pt &quot;MS Shell Dlg 2&quot;;
-color: rgb(149, 117, 61);</string>
-         </property>
-         <property name="text">
-          <string>Columna 10</string>
-         </property>
         </widget>
        </item>
       </layout>
