permisos modificados para el registro

--- a/ui/agregar-usuario.ui
+++ b/ui/agregar-usuario.ui
@@ -260,17 +260,12 @@ color: rgb(149, 117, 61);
          </property>
          <item>
           <property name="text">
-           <string>Agregar</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Modificar</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
            <string>Ver</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Escritura</string>
           </property>
          </item>
         </widget>
